@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2023 the original author or authors.
+ *    Copyright 2009-2024 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -26,7 +26,6 @@ import static org.mockito.Mockito.when;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 
@@ -73,7 +72,7 @@ class DefaultParameterHandlerTest {
         any(JdbcType.class));
     ParameterMapping parameterMapping = new ParameterMapping.Builder(mappedStatement.getConfiguration(), "prop",
         typeHandler).build();
-    List<ParameterMapping> parameterMappings = Collections.singletonList(parameterMapping);
+    List<ParameterMapping> parameterMappings = List.of(parameterMapping);
     when(boundSql.getParameterMappings()).thenReturn(parameterMappings);
 
     DefaultParameterHandler defaultParameterHandler = new DefaultParameterHandler(mappedStatement, parameterObject,
@@ -111,7 +110,7 @@ class DefaultParameterHandlerTest {
   }
 
   @Test
-  void testParameterObjectGetPropertyValueWithAdditionalParameter() throws SQLException {
+  void parameterObjectGetPropertyValueWithAdditionalParameter() throws SQLException {
     Configuration config = new Configuration();
     TypeHandlerRegistry registry = config.getTypeHandlerRegistry();
 
@@ -121,6 +120,8 @@ class DefaultParameterHandlerTest {
     Object parameterObject = 1;
 
     BoundSql boundSql = new BoundSql(config, "some select statement", new ArrayList<ParameterMapping>() {
+      private static final long serialVersionUID = 1L;
+
       {
         add(new ParameterMapping.Builder(config, "id", registry.getTypeHandler(int.class)).build());
       }
@@ -141,7 +142,7 @@ class DefaultParameterHandlerTest {
   }
 
   @Test
-  void testParameterObjectGetPropertyValueWithNull() throws SQLException {
+  void parameterObjectGetPropertyValueWithNull() throws SQLException {
     Configuration config = new Configuration();
     TypeHandlerRegistry registry = config.getTypeHandlerRegistry();
 
@@ -151,6 +152,8 @@ class DefaultParameterHandlerTest {
     Object parameterObject = null;
 
     BoundSql boundSql = new BoundSql(config, "some select statement", new ArrayList<ParameterMapping>() {
+      private static final long serialVersionUID = 1L;
+
       {
         add(new ParameterMapping.Builder(config, "id", registry.getTypeHandler(int.class)).build());
       }
@@ -167,7 +170,7 @@ class DefaultParameterHandlerTest {
   }
 
   @Test
-  void testParameterObjectGetPropertyValueWithTypeHandler() throws SQLException {
+  void parameterObjectGetPropertyValueWithTypeHandler() throws SQLException {
     Configuration config = new Configuration();
     TypeHandlerRegistry registry = config.getTypeHandlerRegistry();
 
@@ -177,6 +180,8 @@ class DefaultParameterHandlerTest {
     Object parameterObject = 1;
 
     BoundSql boundSql = new BoundSql(config, "some select statement", new ArrayList<ParameterMapping>() {
+      private static final long serialVersionUID = 1L;
+
       {
         add(new ParameterMapping.Builder(config, "id", registry.getTypeHandler(int.class)).build());
       }
@@ -193,7 +198,7 @@ class DefaultParameterHandlerTest {
   }
 
   @Test
-  void testParameterObjectGetPropertyValueWithMetaObject() throws SQLException {
+  void parameterObjectGetPropertyValueWithMetaObject() throws SQLException {
     Configuration config = new Configuration();
     TypeHandlerRegistry registry = config.getTypeHandlerRegistry();
 
@@ -203,6 +208,8 @@ class DefaultParameterHandlerTest {
     Author parameterObject = new Author(-1, "cbegin", "******", "cbegin@nowhere.com", "N/A", Section.NEWS);
 
     BoundSql boundSql = new BoundSql(config, "some select statement", new ArrayList<ParameterMapping>() {
+      private static final long serialVersionUID = 1L;
+
       {
         add(new ParameterMapping.Builder(config, "id", registry.getTypeHandler(int.class)).build());
         add(new ParameterMapping.Builder(config, "username", registry.getTypeHandler(String.class)).build());
@@ -231,7 +238,7 @@ class DefaultParameterHandlerTest {
   }
 
   @Test
-  void testParameterObjectGetPropertyValueWithMetaObjectAndCreateOnce() {
+  void parameterObjectGetPropertyValueWithMetaObjectAndCreateOnce() {
     Author parameterObject = mock(Author.class);
 
     Configuration mockConfig = mock(Configuration.class);
@@ -251,6 +258,8 @@ class DefaultParameterHandlerTest {
         new StaticSqlSource(mockConfig, "some select statement"), SqlCommandType.SELECT).build();
 
     BoundSql boundSql = new BoundSql(mockConfig, "some select statement", new ArrayList<ParameterMapping>() {
+      private static final long serialVersionUID = 1L;
+
       {
         add(new ParameterMapping.Builder(mockConfig, "id", registry.getTypeHandler(int.class))
             .jdbcType(JdbcType.INTEGER).build());
